# zuspec-synth

./: README.md  ivpm.yaml  pyproject.toml
docs/: Makefile  api.rst  async_pipeline_synthesis.rst  conf.py  examples.rst  index.rst  interface_protocols_synth.rst  pipeline.rst  quickstart.rst
src/zuspec/synth/: __ext__.py  __init__.py  cli_plugin.py  dfm.py  flow.dv  mls.py  pcf_gen.py  protocol_pipeline.py
src/zuspec/synth/elab/: elab_ir.py  elaborator.py  lowerer.py
src/zuspec/synth/ir/: __init__.py  boundary.py  layers.py  (+4 more)
tests/: conftest.py  test_accessor_lowering.py  test_action_formal.py  test_action_synth.py  test_async_pipeline_synth.py  test_blink_sim.py  test_cdc_analysis.py  test_comb_to_python.py  test_components.py  test_constraint_compiler.py  test_constraint_compiler_sv.py  test_counter_synth.py  test_cube_minimizer.py  test_formal_async_pipeline.py  test_formal_pipeline.py  test_fsm_generator.py  test_fsm_structural.py  test_fsm_to_python.py  test_ir_boundary.py  test_ir_to_python.py  test_is_hierarchical_guard.py  test_layer_verifiers.py  test_layered_pass_manager.py  test_loc_through_passes.py  test_lowered_sv_convention.py  test_memory.py  test_mmr_regfile_emit.py  test_module_assemble_python.py  test_modulo_counter_synth.py  test_multiport_lowering.py  test_multiproc.py  test_odc_cubes.py  test_optimizer.py  test_phase5_passes.py  test_phase6_sv_codegen.py  test_pipeline.py  test_pipeline_cycles.py  test_pipeline_ir.py  test_pipeline_passes.py  test_pipeline_system_adder.py  (+28 more)
tests/examples/: inline_core.py  mem_reader.py  monitor_writer.py
(+79 files in other folders)
